--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,6 +1,61 @@
-<div class="container">
-  <p>Angular Fullstack v3.6.1 |
-    <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-    <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a>
-  </p>
-</div>
+
+  <section class="container">
+    <div class="row">
+      <div class="col-sm-6 social ">
+        <h4 class="title"><strong>paraiso de las Bicicletas </strong></h4>
+        <p class="text-justify Text">Social Soccer es una aplicacion web que te ayudara y te facilitara las cosas
+           a la hora de reservar tu cancha, contamos con diversos establecimientos de canchas sinteticas
+           para que tu elijas la de tu preferencia. Danos la oportunidad de divertirte
+        </p>
+
+        <button ui-sref="users-create" type="button" class="btn btn-primary active">¡Comienza Ya!</button>
+      </div>
+      <div class="col-sm-6 social">
+        <h4 class="title"><strong>Ayudanos a Mejorar</strong></h4>
+
+         <form role="form" id="contact-form" class="contact-form">
+            <div class="row">
+             <div class="col-md-6">
+               <div class="form-group">
+                 <input type="text" class="form-control foo" name="Name" autocomplete="off" id="Name" placeholder="Nombre">
+              </div>
+            </div>
+          <div class="col-md-6">
+            <div class="form-group">
+                <input type="email" class="form-control foo" name="email" autocomplete="off" id="email" placeholder="E-mail">
+            </div>
+          </div>
+        </div>
+            <div class="row">
+              <div class="col-md-12">
+               <div class="form-group">
+                 <textarea class="form-control textarea foo" rows="3" name="Message" id="Message" placeholder="Tu opinion cuenta bastante."></textarea>
+              </div>
+            </div>
+          </div>
+
+          <p class="text-justify Text">Aporta tu comenterio para ayudarnos a ofrecerte un mejor servicio y que asi tu experencia con nosotros sea mejor.</p>
+            <div class="row">
+             <div class="col-md-12">
+               <button type="button" class="btn btn-primary active">Enviar Mensaje</button>
+
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+
+    <hr>
+       <div class="row text-center">
+
+         <h4 class="opacidad"><strong>paraiso de las Bicicletas</strong></h4>
+
+        </div>
+
+       <div class="icon text-center">
+         <a href="#" class="social"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+         <a href="#" class="social"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+         <a href="#" class="social"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+         <a href="#" class="social"><i class="fa fa-google" aria-hidden="true"></i></a>
+       </div>
+  </section>
