--- a/client/components/footer/footer.styl
+++ b/client/components/footer/footer.styl
@@ -1,5 +1,48 @@
-footer.footer
-  border-top 1px solid #E5E5E5
-  margin-top 70px
-  padding 30px 0
-  text-align center
+.footer
+  padding: 50px 0 20px 0
+  background-color: rgba(96, 96, 96, 0.9)
+.footer .title
+  text-align: left
+  color:#fff
+  font-size:20px
+.contact-form
+  margin-top:15px
+.contact-form .textarea
+  min-height:120px
+  font-size:15px
+.contact-form
+  margin-top:15px
+.foo
+  box-shadow:none
+  border-color:#eee
+  height:30px
+.foo:focus
+  box-shadow:none
+.foo-feedback
+  line-height:50px
+.foo-feedback
+  line-height: 50px
+  top: 0px
+.Text
+  color white
+  font-size: small
+.fa-facebook::before
+  color #1e4ed8
+  font-size: 25px
+  margin: 5px
+.fa-instagram::before
+   color #b71e5e
+   font-size: 25px
+   margin: 5px
+.fa-twitter::before
+  color #18b0d2
+  font-size: 25px
+  margin: 5px
+.fa-google::before
+  color #a23737
+  font-size: 25px
+  margin: 5px
+.opacidad
+  color: #6d6d6d
+.btn-primary
+  font-size: 12px
