se hacen cambios

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -40,6 +40,9 @@
 // Component styles are injected through grunt
 /* inject:styl */
 @import 'main/main';
+@import 'parqueadero/parqueadero-create/parqueadero-create';
+@import 'parqueadero/parqueadero-list/parqueadero-list';
 @import '../components/footer/footer';
 @import '../components/modal/modal';
+@import '../components/navbar/navbar';
 /* endinject */
