--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -22,7 +22,7 @@
   background-position: center
   background-size: cover
   background-repeat: no-repeat
-  background-image: url("../../assets/images/main/balon2.jpg")
+  background-image: url("../../assets/images/1.jpg")
   background-attachment fixed
   &-container
     margin: 80px 0
@@ -69,39 +69,60 @@
     .carousel-caption{padding-bottom:160px}
 }
 
-.margin-carousel
-  margin-left 0
-  margin-right 0
+.paquetes
+  padding-bottom 50px
+  padding-top 10px
+.premium
+  color white
+  background-color #1c4a58
+.oro
+  color white
+  background-color #204366
+.estandar
+  color white
+  background-color #428bca
+.paquete1
+  border 2px solid #1c4a58
+.paquete2
+  border 2px solid #204366
+.paquete3
+  border 2px solid #428bca
+.boton1
+  background-color #1c4a58
+  color white
+  border-color #1c4a58
+  border-radius 10px
+.boton1:hover
+  color #1c4a58
+  border-color #1c4a58
+  background-color white
+.boton2
+  background-color #204366
+  color white
+  border-color #204366
+  border-radius 10px
+.boton2:hover
+  color #204366
+  border-color #204366
+  background-color white
+.boton3
+  background-color #428bca
+  color white
+  border-color #428bca
+  border-radius 10px
+.boton3:hover
+  color #428bca
+  border-color #428bca
+  background-color white
+.lead
+  font-size 33px
+  margin-bottom 0px
+.linea
+  border 3px solid #428bca
+  border-radius 300px
+  height 0px
+  text-align center
 
-.padding-carousel
-  padding-left 0
-  padding-right 0
-
-.InfoContainer
-  padding-top 1em
-  background-color #fafafa
-
-.InfoContainer h4
-  margin 1 em 0
-  color #132E33
-  font-weight bold
-
-.imgInfo
-  width 100%
-  height 310px !important
-  border #003f84 solid 3px
-  border-radius 28px
-
-.Title-animated
-  font-size 60px
-  text-transform uppercase
-
-.carousel-caption h1:first-child
-  animation-delay 1s
-
-.carousel-caption h1:nth-child(2)
-  animation-delay 2s
-.carousel-caption
-  bottom 23% !important
-  width 75%
-  left 12.8%
+.Sombra
+  box-shadow 0px 17px 20px rgba(16, 22, 26, 0.75)
+  margin-left 0px
