--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,3 +1,8 @@
+
+<div class="Bici">
+
+  <a href="/" ><img class="logo" src="assets/images/6.png" alt="" /></a>
+</div>
 <div class="navbar navbar-default navbar-static-top menu" ng-controller="NavbarController">
   <div class="container">
     <div class="navbar-header">
