--- a/client/components/navbar/navbar.styl
+++ b/client/components/navbar/navbar.styl
@@ -1,2 +1,12 @@
 .menu
   color black
+.logo
+  width 7%
+  transition: 1s;
+  position: absolute;
+  left 0
+.Bici
+  position: relative;
+
+.Bici:hover .logo
+   right: calc(50% - 100px);
