se hace diseño al main

--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -62,12 +62,19 @@
   font-size 100px
   text-align center
   color white
-
+.imgInfo
+  width 100%
+  height 300px !important
+.Info
+  padding 18px !important
 @media screen and (min-width:768px){
     .carousel-caption h3{font-size: 52px}
     .carousel-caption p{font-size: 32px}
     .carousel-caption{padding-bottom:160px}
 }
+@media (min-width: 1200px)
+  .container
+    width 1052px
 
 .paquetes
   padding-bottom 50px
@@ -86,7 +93,7 @@
 .paquete2
   border 2px solid #204366
 .paquete3
-  border 2px solid #428bca
+  bordtext-justifyer 2px solid #428bca
 .boton1
   background-color #1c4a58
   color white
