--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -3,14 +3,14 @@
     <div class="row">
       <div class="col-sm-6 social ">
         <h4 class="title"><strong>paraiso de las Bicicletas </strong></h4>
-        <p class="text-justify Text">Social Soccer es una aplicacion web que te ayudara y te facilitara las cosas
-           a la hora de reservar tu cancha, contamos con diversos establecimientos de canchas sinteticas
+        <p class="text-justify Text">El paraiso de las bicicletas es una aplicacion web que te ayudara y te facilitara las cosas
+           a la hora de parquear tu bici, contamos con diversos puntos de parqueo en la ciudad
            para que tu elijas la de tu preferencia. Danos la oportunidad de divertirte
         </p>
 
         <button ui-sref="users-create" type="button" class="btn btn-primary active">¡Comienza Ya!</button>
       </div>
-      <div class="col-sm-6 social">
+      <div class="col-sm-6 ">
         <h4 class="title"><strong>Ayudanos a Mejorar</strong></h4>
 
          <form role="form" id="contact-form" class="contact-form">
@@ -28,13 +28,18 @@
         </div>
             <div class="row">
               <div class="col-md-12">
-               <div class="form-group">
+               <div class="form-group">       <div class="row text-center">
+
+         <h4 class="opacidad"><strong>paraiso de las Bicicletas</strong></h4>
+
+        </div>
+
                  <textarea class="form-control textarea foo" rows="3" name="Message" id="Message" placeholder="Tu opinion cuenta bastante."></textarea>
               </div>
             </div>
           </div>
 
-          <p class="text-justify Text">Aporta tu comenterio para ayudarnos a ofrecerte un mejor servicio y que asi tu experencia con nosotros sea mejor.</p>
+          <p class="text-justify Text-1">Aporta tu comenterio para ayudarnos a ofrecerte un mejor servicio y que asi tu experencia con nosotros sea mejor.</p>
             <div class="row">
              <div class="col-md-12">
                <button type="button" class="btn btn-primary active">Enviar Mensaje</button>
@@ -46,11 +51,6 @@
   </div>
 
     <hr>
-       <div class="row text-center">
-
-         <h4 class="opacidad"><strong>paraiso de las Bicicletas</strong></h4>
-
-        </div>
 
        <div class="icon text-center">
          <a href="#" class="social"><i class="fa fa-facebook" aria-hidden="true"></i></a>
