--- a/client/components/footer/footer.styl
+++ b/client/components/footer/footer.styl
@@ -1,5 +1,5 @@
 .footer
-  padding: 50px 0 20px 0
+  padding: 11px 0 20px 0
   background-color: rgba(96, 96, 96, 0.9)
 .footer .title
   text-align: left
@@ -25,7 +25,11 @@
   top: 0px
 .Text
   color white
+  font-size: 19px
+.Text-1
+  color white
   font-size: small
+
 .fa-facebook::before
   color #1e4ed8
   font-size: 25px
@@ -46,3 +50,6 @@
   color: #6d6d6d
 .btn-primary
   font-size: 12px
+.social
+  align-items: center
+  padding-top: 60px
