--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,32 +1,73 @@
 
-<div class="Bici">
 
-  <a href="/" ><img class="logo" src="assets/images/6.png" alt="" /></a>
-</div>
-<div class="navbar navbar-default navbar-static-top menu" ng-controller="NavbarController">
+
+<!--Header-->
+<header class="Header-container">
   <div class="container">
-    <div class="navbar-header">
-      <button class="navbar-toggle" type="button" ng-click="nav.isCollapsed = !nav.isCollapsed">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="/" class="navbar-brand">paraiso-ciclista</a>
-    </div>
-    <div uib-collapse="nav.isCollapsed" class="navbar-collapse collapse" id="navbar-main">
-      <ul class="nav navbar-nav">
-        <li ng-repeat="item in nav.menu" ui-sref-active="active">
-            <a ui-sref="{{item.state}}">{{item.title}}</a>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left" role="search">
-       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
-       </div>
-       <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+    <div class="row Header-constainerAlignV">
+    <div class="col-xs-6">
+      <div class="Bici">
+
+        <a href="/" ><img class="logo" src="assets/images/6.png" alt="" /></a>
+      </div>
+
+      <h1><a href="main" class="Titulo">Paraiso Bicicletas</a></h1>
 
     </div>
+    <div class="col-xs-6 text-right">
+      <button class="navbar-toggle collapsed Navbar" data-toggle="collapse" data-target="#navMenu">
+        <i class="fa fa-bars"></i>
+      </button>
+    </div>
+   </div>
+ </div>
+</header>
+<!--/header-->
+<!--/menu-->
+<div class="MenuContainer">
+  <nav class="collapse navbar navbar-collapse Nav-c" id="navMenu">
+    <div class="container">
+      <div class="row AligNavbar">
+        <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 AlignItemsNavbar">
+          <ul class="nav navbar-nav">
+            <li >
+              <a ui-sref="main" ui-sref-active="active" class="navbar-link text-center" ng-click="nav.ocultarCollapse()">Alquiler</a>
+            </li>
+
+            <!-- <li>
+              <a href="equipo" class="navbar-link text-center" ng-click="nav.ocultarCollapse()">Equipo</a>
+            </li> -->
+
+          </ul>
+        </div>
+        <div class=" col-xs-12 col-md-6 hidden-xs MarginTopSearch-main Search">
+          <form>
+            <div class="input-group">
+             <input type="text" class="form-control" placeholder="¿Encontro lo que buscaba?"></input>
+              <span class="input-group-btn">
+                <button class="btn Btn-adsi">
+                  <span class="hidden-xs hidden-sm">Buscar</span>
+                  <i class="fa fa-search IconSearch visible-xs visible-sm"></i>
+                </button>
+              </span>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <div class="col-xs-12 visible-xs MarginTopSearch">
+    <form>
+      <div class="input-group">
+       <input type="text" class="form-control" placeholder="¿Encontro lo que buscaba?"></input>
+        <span class="input-group-btn">
+          <button class="btn Btn-adsi">
+            <span class="hidden-xs hidden-sm">Buscar</span>
+            <i class="fa fa-search IconSearch visible-xs visible-sm"></i>
+          </button>
+        </span>
+      </div>
+    </form>
   </div>
 </div>
+<!--/menu-->
