--- a/client/components/navbar/navbar.styl
+++ b/client/components/navbar/navbar.styl
@@ -1,12 +1,26 @@
 .menu
   color black
+  margin 0
+
 .logo
   width 7%
-  transition: 1s;
-  position: absolute;
   left 0
+  width: 48px;
+  transition: 5s;
+  position: absolute;
+
 .Bici
   position: relative;
+  transform: translateX(-60px);
 
 .Bici:hover .logo
-   right: calc(50% - 100px);
+  left: calc(100% - 100px);
+
+.Nav-c
+  margin 0
+
+.Titulo
+  color
+
+.Titulo:hover
+  Text-decoration none
